03102019 Aashish 1504: Pointwise interchange table title, form and button setting in responsive

--- a/assets/css/gxcpl-dwar.css
+++ b/assets/css/gxcpl-dwar.css
@@ -977,8 +977,8 @@ p.addRow a{
 }
 @media screen and (max-width: 768px)  {
 	.gxcpl-legend-outer {
-		position: absolute;
-		bottom: 80px;
+		/*position: absolute;
+		bottom: 80px;*/
 	}
 	.gxcpl-modal-interchange, .gxcpl-modal-stable, 
 	.gxcpl-modal-schedule, .gxcpl-modal-signon{
